Fix comparison chart placeholder height on narrow screens

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1632,10 +1632,14 @@
 				.row > & {
 					min-height: 360px;
 				}
+
+				&#erneuerbare-energien-in-flensburg-chart {
+					min-height: 164px;
+				}
 			}
 
 			#content .row > figure {
-					min-height: 380px;
+				min-height: 380px;
 			}
 	}
 
